# ci-cd-aws-ec2

./: Dockerfile  app.py  pyproject.toml  version-6.txt  version-7.txt  version-8.txt  version-9.txt
.github/workflows/: actions.yaml
