[tool.poetry]
name = "project-aws"
version = "0.1.0"
description = ""
authors = ["Igorithm <amit1994biswas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
requests = "^2.32.3"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
